--- a/admin/meeting_minutes/20250410_Meeting2.md
+++ b/admin/meeting_minutes/20250410_Meeting2.md
@@ -11,7 +11,7 @@
 - [X] Chanbin Na
 - [X] Dorje Pradhan
 - [X] Kiara Singh
-- [ ] Minahil Bhansali
+- [ ] Minahil Yasar
 - [X] Phyo Thant
 - [X] Ryan Awal
 - [ ] Samson Gebrekidan
