--- a/admin/meeting_minutes/20250416_Meeting.md
+++ b/admin/meeting_minutes/20250416_Meeting.md
@@ -30,7 +30,7 @@
 - We'll start with a boilerplate for the HTML, CSS, and JS files. Each team should have a branch.
 
 #### Dividing Tasks
-There's going to be a branch for each team. Be sure to keep your local repo updated!
+There's going to be a branch for each team. Be sure to keep your local repo updated! **We also have dedicated team channels in the team Slack.**
 1. HTML set-up (2 people)
     - Team HTML: Dorje, Ryan
 2. CSS (3 people)
