Add question response from 4/17 lead meeting

--- a/admin/meeting_minutes/20250416_Meeting.md
+++ b/admin/meeting_minutes/20250416_Meeting.md
@@ -67,7 +67,7 @@ There's going to be a branch for each team. Be sure to keep your local repo upda
 ## Questions, Concerns, Comments
 | Type | Description | Response |
 | ---- | ---- | ---- |
-| Question | When we code together and the commits/pushes are coming from one account, how does that affect how we're noted/tracked that we're actually working together as a team? | - |
+| Question | When we code together and the commits/pushes are coming from one account, how does that affect how we're noted/tracked that we're actually working together as a team? | (Answered 4/17/2025) Pair/group programming is okay. It's recommended that programmers swap so that the commit history shows there was some form of contribution from everyone. The percentage of contributions shouldn't be too important, but it should show that each person did something at least. |
 
 ## Other Notes & Information
 - Team JS has a meeting tomorrow (4/17) @ 11:00am.
