--- a/specs/adrs/1.1.1_feature-and-audience.md
+++ b/specs/adrs/1.1.1_feature-and-audience.md
@@ -2,7 +2,7 @@
 ## Meta Info
 - Version: 1.1.1
 - Date Created: May 8, 2025
-- Last Updated: May 8, 2025
+- Last Updated: [May 14, 2025](./1.1.2_feature-and-audience.md)
 
 Attendance:
 - [X] Arlene Garcia
