--- a/admin/meeting_minutes/20250514_Meeting.md
+++ b/admin/meeting_minutes/20250514_Meeting.md
@@ -6,8 +6,8 @@
     - Time permitting, complete our storage method ADR (if we want to get approval soon).
   - Discuss the plan for our currently selected features and suggestions.
 - **Meeting Location:** Sixth College RWAC
-- **Meeting Lead:** NAME
-- **Note Taker:** NAME
+- **Meeting Lead:** -
+- **Note Taker:** Ashley
 
 ## Attendance
 - [X] Arlene Garcia
