Approved feature ADR

--- a/specs/adrs/1.1.2_feature-and-audience.md
+++ b/specs/adrs/1.1.2_feature-and-audience.md
@@ -18,7 +18,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Patrick Thant     | |
 | Ryan Awal         | |
 | Samson Gebrekidan | |
-| Shashwat Dudeja   | |
+| Shashwat Dudeja   | Yes |
 
 ## Context/Problem
 The topic of the issue we're coming to a resolution for. 
