Approved storage-method ADR

--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -18,7 +18,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Patrick Thant     | |
 | Ryan Awal         | |
 | Samson Gebrekidan | |
-| Shashwat Dudeja   | |
+| Shashwat Dudeja   | Yes |
 
 ## Context/Problem
 For our project, we will need some form of storage method for our recipes. As we've discussed, localStorage is too limiting for our project. While we do want to utilize IndexedDB for its indexing abilities, the API for it is verbose and will be a challenge for us to learn. However, Professor Powell has suggested a wrapper for it: Dexxie.
