--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -10,7 +10,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | ----              | ---- | 
 | Arlene Garcia     | |
 | Ashley Vo         | Yes |
-| Chanbin Na        | |
+| Chanbin Na        | Yes |
 | Dorje Pradhan     | |
 | Kiara Singh       | |
 | Kiet Dang         | |
