--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -21,24 +21,26 @@ By checking the "Approved?" box, the following member approves of these decision
 | Shashwat Dudeja   | Yes |
 
 ## Context/Problem
-For our project, we will need some form of storage method for our recipes. As we've discussed, localStorage is too limiting for our project. While we do want to utilize IndexedDB for its indexing abilities, the API for it is verbose and will be a challenge for us to learn. However, Professor Powell has suggested a wrapper for it: Dexxie.
+For our project, we will need some form of storage method for our recipes. As we've discussed, localStorage is too limiting for our project. While we do want to utilize IndexedDB for its indexing abilities, the API for it is verbose and will be a challenge for us to learn. However, Professor Powell has suggested a wrapper for it: Dexie.
 
 ## Options Considered
 - localStorage (the problem)
 - IndexedDB
-  - Dexxie
+  - Dexie
 
 ### IndexedDB
 - We can use a wrapper such as Dexie to avoid the verbosity of IndexedDB's API. This would ease the learning curve for us while being able to use IndexedDB's power to index.
 
 ## Decision & Outcome
-
+We have decided to use Dexie.js as a wrapper for IndexDB. This allows us to harness the power of IndexDB without having to deal with complexity and verbosity of it's native API. Dexie offers much more developer-friendly interface, especially for our team's needs and timeline. 
 
 ## Pros & Cons
 Based on our decision, what are the tradeoffs we acknowledge?
 
 ### Pros
-
-
+- We get more storage then localStorage, which is limited around 5MB (but IndexDB has limitless storage, depending on user's device).
+- Indexed quaries allows us for efficient search and retrieval of the data
+- 
 ### Cons
-
+- We still need to learn how to use Dexie and understand IndexDB's data model.
+- 
