--- a/specs/adrs/1.1.2_feature-and-audience.md
+++ b/specs/adrs/1.1.2_feature-and-audience.md
@@ -11,7 +11,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Arlene Garcia     | |
 | Ashley Vo         | Yes |
 | Chanbin Na        | |
-| Dorje Pradhan     | |
+| Dorje Pradhan     | Yes |
 | Kiara Singh       | |
 | Kiet Dang         | |
 | Minahil Yasar     | |
