--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -32,15 +32,19 @@ For our project, we will need some form of storage method for our recipes. As we
 - We can use a wrapper such as Dexie to avoid the verbosity of IndexedDB's API. This would ease the learning curve for us while being able to use IndexedDB's power to index.
 
 ## Decision & Outcome
-We have decided to use Dexie.js as a wrapper for IndexDB. This allows us to harness the power of IndexDB without having to deal with complexity and verbosity of it's native API. Dexie offers much more developer-friendly interface, especially for our team's needs and timeline. 
+We have decided to use Dexie.js as a wrapper for IndexedDB. This allows us to harness the power of IndexedDB without having to deal with complexity and verbosity of it's native API. Dexie offers much more developer-friendly interface, especially for our team's needs and timeline. 
 
 ## Pros & Cons
 Based on our decision, what are the tradeoffs we acknowledge?
 
 ### Pros
-- We get more storage then localStorage, which is limited around 5MB (but IndexDB has limitless storage, depending on user's device).
+- We get significantly more storage capacity then localStorage, which is limited around 5MB (but IndexedDB has limitless storage, depending on user's device).
 - Indexed quaries allows us for efficient search and retrieval of the data
-- 
+- Unlike localStorage, which is synchronous (blocking), IndexedDB is asynchronous, meaning it doesn’t freeze the UI while processing.
+- Compare to localStorage which stores data as string, indexedDB is way more reliable.
+- IndexedDB supports binary data (like Blobs) making it much more versatile for storing things like images.
+- Dexie abstracts away bolierplate code, making IndexDB much more easier to work with.
 ### Cons
-- We still need to learn how to use Dexie and understand IndexDB's data model.
-- 
+- We still need to learn how to use Dexie and understand IndexedDB's data model which could be possible timesink.
+- Learning concept like `async` calls or `Promises` whould be also potential learning curve.
+- Asynchronous behavior means unpredictable behavior, so it might be more challenging to debugging. 
