--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -8,7 +8,7 @@
 By checking the "Approved?" box, the following member approves of these decisions in this ADR.
 | Team Member       | Approved? |
 | ----              | ---- | 
-| Arlene Garcia     | |
+| Arlene Garcia     | Yes |
 | Ashley Vo         | Yes |
 | Chanbin Na        | Yes |
 | Dorje Pradhan     | Yes |
@@ -16,7 +16,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Kiet Dang         | |
 | Minahil Yasar     | |
 | Patrick Thant     | |
-| Ryan Awal         | |
+| Ryan Awal         | Yes |
 | Samson Gebrekidan | |
 | Shashwat Dudeja   | Yes |
 
