--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -13,7 +13,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Chanbin Na        | Yes |
 | Dorje Pradhan     | Yes |
 | Kiara Singh       | |
-| Kiet Dang         | |
+| Kiet Dang         | Yes |
 | Minahil Yasar     | |
 | Patrick Thant     | |
 | Ryan Awal         | Yes |
