--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -14,7 +14,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Dorje Pradhan     | Yes |
 | Kiara Singh       | |
 | Kiet Dang         | Yes |
-| Minahil Yasar     | |
+| Minahil Yasar     | Yes |
 | Patrick Thant     | |
 | Ryan Awal         | Yes |
 | Samson Gebrekidan | |
