Add Patrick's approval

--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -15,7 +15,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Kiara Singh       | |
 | Kiet Dang         | Yes |
 | Minahil Yasar     | Yes |
-| Patrick Thant     | |
+| Patrick Thant     | Yes |
 | Ryan Awal         | Yes |
 | Samson Gebrekidan | |
 | Shashwat Dudeja   | Yes |
