Add Samson and Kiara's approvals

--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -12,12 +12,12 @@ By checking the "Approved?" box, the following member approves of these decision
 | Ashley Vo         | Yes |
 | Chanbin Na        | Yes |
 | Dorje Pradhan     | Yes |
-| Kiara Singh       | |
+| Kiara Singh       | Yes |
 | Kiet Dang         | Yes |
 | Minahil Yasar     | Yes |
 | Patrick Thant     | Yes |
 | Ryan Awal         | Yes |
-| Samson Gebrekidan | |
+| Samson Gebrekidan | Yes |
 | Shashwat Dudeja   | Yes |
 
 ## Context/Problem
