--- a/specs/adrs/1.1.2_feature-and-audience.md
+++ b/specs/adrs/1.1.2_feature-and-audience.md
@@ -15,7 +15,7 @@ By checking the "Approved?" box, the following member approves of these decision
 | Kiara Singh       | |
 | Kiet Dang         | |
 | Minahil Yasar     | |
-| Patrick Thant     | |
+| Patrick Thant     | YES |
 | Ryan Awal         | |
 | Samson Gebrekidan | |
 | Shashwat Dudeja   | Yes |
