Update storage method ADR

--- a/specs/adrs/1.2.1_storage-method.md
+++ b/specs/adrs/1.2.1_storage-method.md
@@ -2,7 +2,7 @@
 ## Meta Info
 - Version: 1.2.1
 - Date Created: May 14, 2025
-- Last Updated: May 14, 2025
+- Last Updated: May 19, 2025
 
 ### Approval
 By checking the "Approved?" box, the following member approves of these decisions in this ADR.
@@ -33,6 +33,8 @@ For our project, we will need some form of storage method for our recipes. As we
 
 ## Decision & Outcome
 We have decided to use Dexie.js as a wrapper for IndexedDB. This allows us to harness the power of IndexedDB without having to deal with complexity and verbosity of it's native API. Dexie offers much more developer-friendly interface, especially for our team's needs and timeline. 
+
+**UPDATE (5/19)**: IndexedDB was approved, but Dexie was *not* approved. We were told to start off with a custom interface for IndexedDB and would need to show a proof of concept (POC) if we want to necessitate Dexie.
 
 ## Pros & Cons
 Based on our decision, what are the tradeoffs we acknowledge?
