Update approval to v1.1.2 ADR

--- a/specs/adrs/1.1.2_feature-and-audience.md
+++ b/specs/adrs/1.1.2_feature-and-audience.md
@@ -8,23 +8,23 @@
 By checking the "Approved?" box, the following member approves of these decisions in this ADR.
 | Team Member       | Approved? |
 | ----              | ---- | 
-| Arlene Garcia     | |
+| Arlene Garcia     | Yes |
 | Ashley Vo         | Yes |
-| Chanbin Na        | |
+| Chanbin Na        | Yes |
 | Dorje Pradhan     | Yes |
-| Kiara Singh       | |
-| Kiet Dang         | |
-| Minahil Yasar     | |
+| Kiara Singh       | Yes |
+| Kiet Dang         | Yes |
+| Minahil Yasar     | Yes |
 | Patrick Thant     | YES |
-| Ryan Awal         | |
-| Samson Gebrekidan | |
+| Ryan Awal         | Yes |
+| Samson Gebrekidan | Yes |
 | Shashwat Dudeja   | Yes |
 
 ## Context/Problem
-The topic of the issue we're coming to a resolution for. 
+Given our app, we have a lot of features to consider. However, trying to tackle them all at once is not a wise decision. So, based on necessity, how should be prioritize what features to implement? In other words, what would be the most important to our users?
 
 ## Options Considered
-What the team has suggested and/or researched.
+(Combined. See below.)
 
 ## Decision & Outcome
 ### Features
