Fix standup titles

--- a/admin/meeting_minutes/20250518_StandUp.md
+++ b/admin/meeting_minutes/20250518_StandUp.md
@@ -1,4 +1,4 @@
-# Meeting Minutes
+# Stand Up
 ## Meeting Information
 - **Meeting Date/Time:** May 18, 2025 (Asynchronous)
   - Clarification: The stand-up was done on May 18th but documented on May 20th.
