--- a/admin/meeting_minutes/20250521_StandUp.md
+++ b/admin/meeting_minutes/20250521_StandUp.md
@@ -14,7 +14,7 @@
 - [X] Patrick Thant
 - [X] Ryan Awal
 - [X] Samson Gebrekidan
-- [ ] Shashwat Dudeja
+- [X] Shashwat Dudeja
 
 ## Stand Up
 | Member            | Progress | Blockers |
@@ -29,4 +29,4 @@
 | Patrick Thant     | I won't be able to work on the project until later tmr. I have another final project coming up for the other class as well. I will work on researching IndexDB tmr. | |
 | Ryan Awal         | Decided to work on the timer with Minahil on Friday. | |
 | Samson Gebrekidan | I worked with Kiara, Kiet, and Arlene to add the recipe card feature. We made sure the form works and shows saved recipes from local storage on the homepage. | |
-| Shashwat Dudeja   | | |
+| Shashwat Dudeja   | Working with Chanbin and Dorje on Friday to refine CSS further | |
