--- a/specs/adrs/1.1.1_feature-and-audience.md
+++ b/specs/adrs/1.1.1_feature-and-audience.md
@@ -4,7 +4,7 @@
 - Date Created: May 8, 2025
 - Last Updated: [May 14, 2025](./1.1.2_feature-and-audience.md)
 
-Attendance:
+### Attendance
 - [X] Arlene Garcia
 - [X] Ashley Vo
 - [X] Chanbin Na
