--- a/specs/adrs/1.3.1_daily_standup_frequency.md
+++ b/specs/adrs/1.3.1_daily_standup_frequency.md
@@ -1,10 +1,10 @@
-# ADR: Features and Audience Definition
+# ADR: Stand-up Frequency
 ## Meta Info
 - Version: 1.3.1
 - Date Created: May 19, 2025
 - Last Updated: May 19, 2025
 
-Attendance:
+### Attendance
 - [X] Arlene Garcia
 - [X] Ashley Vo
 - [X] Chanbin Na
