--- a/specs/adrs/1.4.1_style-guide.md
+++ b/specs/adrs/1.4.1_style-guide.md
@@ -1,10 +1,10 @@
-# ADR: Features and Audience Definition
+# ADR: Style Guide
 ## Meta Info
 - Version: 1.4.1
 - Date Created: May 22, 2025
 - Last Updated: May 22, 2025
 
-Attendance:
+### Attendance
 - [X] Arlene Garcia
 - [X] Ashley Vo
 - [X] Chanbin Na
