--- a/specs/adrs/1.5.1_indexeddb-wrapper.md
+++ b/specs/adrs/1.5.1_indexeddb-wrapper.md
@@ -1,10 +1,10 @@
-# ADR: Storage Method
+# ADR: IndexedDB Wrapper
 ## Meta Info
 - Version: 1.5.1
 - Date Created: May 22, 2025
 - Last Updated: May 22, 2025
 
-Attendance:
+### Attendance
 - [X] Arlene Garcia
 - [X] Ashley Vo
 - [X] Chanbin Na
