Update details in ADR 1.7

--- a/specs/adrs/1.7.1_ingredient-input-storage.md
+++ b/specs/adrs/1.7.1_ingredient-input-storage.md
@@ -39,6 +39,32 @@ On our "create recipe" page, we initially had one input field for each ingredien
 ## Decision & Outcome
 We'll go with **three input fields** where we have one (1) for quantity, one (1) for the units, and one (1) for the actual name of the ingredient. For now, we'll start off with providing a list of units in the **metric** system.
 
+This also means, underneath, the recipe data will look like:
+```
+{
+  ...
+  recipeIngredient: [
+    { 
+      quantity:
+      units:
+      name: 
+    },
+    ...
+  ]
+  ...
+}
+```
+... rather than:
+```
+{
+  recipeIngredient: [
+    "Ingredient 1",
+    "Ingredient 2",
+    ...
+  ]
+}
+```
+
 ## Pros & Cons
 Based on our decision, what are the tradeoffs we acknowledge?
 
@@ -59,3 +85,4 @@ Based on our decision, what are the tradeoffs we acknowledge?
 - There is more input friction for the user. Rather than allowing the user to input "freestyle," the user has to ensure all three fields are filled.
   - This adds more validation on our end.
   - We could remedy the input friction by allowing users to automatically move to the next field when they press "ENTER" or some sort, but this is likely something we have to consider in a hypothetical future as the project end is nearing.
+- This doesn't follow Google's recipe schema 1-to-1. However, if we want to consider search engine optimization (SEO) in the future, it's not impossible to turn our objects into strings- it just means more work to convert.
